--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,8 @@
 [projectPreprocessor]
-inPath: ./cpptest
-outPath: ./test_data
 outputType: multiple
 maxFileSize: 3072
 
 [pathExtractor]
-gil python
-inputPath: ./test_data/repoSample[Loop through directories ~ check for timeout]
-datasetName: repoSample
 numOfProcesses: 16
 maxPathContexts: 200
 maxLength: 8
@@ -23,15 +18,7 @@ useParentheses: True
 useCheckpoint: True
 
 [outputFormatter]
-inputDirectory: .
-datasets: repoSample
-outputDirectory: ./test_data_out
-datasetNameExtension: ast_cfg_ddg
-notIncludeMethods: [different fun with same method name - no info about task]
-includeASTPaths: True
-includeCFGPaths: True
-includeCDGPaths: False
-includeDDGPaths: True
+notIncludeMethods:
 maxASTPaths: 200
 maxCFGPaths: 10
 maxCDGPaths: 50
