Fixes and Update

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [projectPreprocessor]
-outputType: file
+outputType: multiple
 maxFileSize: 3072
 
 [pathExtractor]
@@ -15,6 +15,7 @@ downSymbol: _
 labelPlaceholder: <SELF>
 useParentheses: True
 useCheckpoint: True
+generateAll: True
 
 [outputFormatter]
 notIncludeMethods:
