--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,9 @@
 [projectPreprocessor]
 outputType: file
 maxFileSize: 3072
+train_split: 0.89
+test_split: 0.075
+val_split: 0.035
 
 [pathExtractor]
 maxPathContexts: 200
