--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,6 @@
 [projectPreprocessor]
 outputType: file
 maxFileSize: 3072
-train_split: 0.89
-test_split: 0.075
-val_split: 0.035
 
 [pathExtractor]
 maxPathContexts: 200
@@ -18,7 +15,7 @@ downSymbol: _
 labelPlaceholder: <SELF>
 useParentheses: True
 useCheckpoint: True
-generateAll: True
+generateAll: False
 
 [outputFormatter]
 notIncludeMethods:
@@ -26,3 +23,6 @@ maxASTPaths: 200
 maxCFGPaths: 10
 maxCDGPaths: 50
 maxDDGPaths: 100
+train_split: 0.89
+test_split: 0.075
+val_split: 0.035
